Changed the db to SQLServer

--- a/Nova_Land/appsettings.json
+++ b/Nova_Land/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AuthDbContextConnection": "Server=localhost;port=3306;Database=Nova_Land;uid=root;pwd=August@2021;"
+    //"AuthDbContextConnection": "Server=localhost;port=3306;Database=Nova_Land;uid=root;pwd=August@2021;"
+    "AuthDbContextConnection": "Server=dev.cs.smu.ca;Database=ns_sawant;User Id=ns_sawant;Password=A00457099!cda;"
   }
 }
